gccida/c3/validate_replace_rtx_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:905:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:912:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:913:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v19; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:919:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v25; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:923:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v29; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:927:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v33; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:935:1: error: must use 'enum' tag to refer to type 'extraction_pattern'
extraction_pattern v41; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:947:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v53; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:952:4: error: expected ';' after expression
rtx v58; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:952:5: error: use of undeclared identifier 'v58'
rtx v58; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:953:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v59; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:954:6: error: use of undeclared identifier 'fld'
rtx *fld; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:955:6: error: use of undeclared identifier 'v61'
rtx *v61; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:959:4: error: expected ';' after expression
rtx v65; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:959:5: error: use of undeclared identifier 'v65'
rtx v65; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:962:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v68; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:965:4: error: expected ';' after expression
rtx v71; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:965:5: error: use of undeclared identifier 'v71'
rtx v71; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:966:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v72; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_replace_rtx_1/src/obj/recog.o] Error 1
